--- a/templates/account/update.html
+++ b/templates/account/update.html
@@ -14,7 +14,7 @@
 
 <div class="loading-overlay"><div class="loading-text vcenter">Loading...</div></div>
 <div class="container-padded remove-padding-bottom">
-    <section class="mid-grey pattern-brushed">
+    <section class="mid-grey pattern-brushed padding-bottom-sm">
         <div class="container padding-top">
             <div class="row margin-bottom">
                 <div class="col-sm-6 col-xs-12 text-center">
