--- a/templates/admin/applications.html
+++ b/templates/admin/applications.html
@@ -14,7 +14,7 @@
                 <div class="col-sm-9">
                     <h1><strong>{{ _('Admin') }} :</strong> {{ _('Featured projects') }}</h1>
                 {% include "admin/js/featured_apps.js" %}
-                    <ul class="nav nav-pills">
+                    <ul class="nav nav-pills nav-pills-dark">
                         {% for c in categories %}
                         <li {% if loop.first %}class="active"{% endif %}>
                             <a href="#{{c.short_name}}" data-toggle="tab">{{c.name}}</a>
@@ -37,6 +37,7 @@
                             {% endfor %}
                         </div>
                         {% endfor %}
+                        </table>
                     </div>
                 </div>
             </div>
