--- a/templates/admin/del_category.html
+++ b/templates/admin/del_category.html
@@ -18,7 +18,7 @@
                 </div>
                 <h2>{{_('Delete Category')}}: {{category.name}}?</h2>
                 <form method="POST" role="form" action="{{url_for('admin.del_category', id=category.id)}}">
-                    {{form.hidden_tag()}}
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                     <input class="btn btn-danger" type="submit"  value="Yes"></input>
                     <a class="btn btn-success" href="{{url_for('admin.categories')}}">No, do not delete it</a>
                 </form>
