--- a/templates/applications/blog.html
+++ b/templates/applications/blog.html
@@ -4,40 +4,45 @@
 {% import "applications/_helpers.html" as helper %}
 
 {% block content %}
-        <div class="container-padded">
-        <div class="container container-padded">
-<div class="row">
-    {% if app %}
-    <div class="col-sm-3">
-        {{ helper.render_app_local_nav(app, 'blog', current_user) }}
-    </div>
-    <div class="col-sm-9" style="min-height:400px">
-        {{ helper.render_app_title(app, upload_method) }}
-        <hr>
-        {% if blogposts %}
-        <hr>
-            <ul>
-                {% for blogpost in blogposts %}
-                    <li>
-                        <div>
-                            <a href="{{url_for('app.show_blogpost', short_name=app.short_name, id=blogpost.id)}}">{{ blogpost.title }}</a>
+{% if app %}
+        {{ helper.render_app_local_nav(app, 'auditlog', current_user) }}
+            <div class="container-padded">
+                <div class="container container-padded">
+                    <div class="row">
+                        <div class="col-sm-9 col-sm-offset-3">
+                        {{ helper.render_app_title(app, upload_method) }}
+                        <hr>
+                        {% if blogposts %}
+                        <hr>
+                            <ul>
+                                {% for blogpost in blogposts %}
+                                    <li>
+                                        <div>
+                                            <a href="{{url_for('app.show_blogpost', short_name=app.short_name, id=blogpost.id)}}">{{ blogpost.title }}</a>
+                                        </div>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        {% else %}
+                            <h1>{{ _('Sorry! No posts so far.') }}</h1>
+                        {% endif %}
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            {% else %}
+            <div class="container-padded">
+                <div class="container container-padded">
+                    <div class="row">
+                        <div class="col-sm-9 col-sm-offset-3">
+                            <div class="page-header">
+                                <h1>{{ _('This project does not exist.') }}</h1>
+                            </div>
                         </div>
-                    </li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <h1>{{ _('Sorry! No posts so far.') }}</h1>
-        {% endif %}
-        <hr>
-    </div>
-    {% else %}
-    <div class="page-header">
-        <h1>{{ _('Sorry! This project does not exist.') }}</h1>
-    </div>
-    {% endif %}
-</div>
-</div>
-        </div>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
 {{ helper.broken_image() }}
 {{ helper.knob() }}
 {% endblock %}
