--- a/templates/applications/delete.html
+++ b/templates/applications/delete.html
@@ -4,30 +4,27 @@
 
 {% block content %}
 {% if app %}
-<div class="container-padded">
-    <div class="container container-padded">
-      <div class="row">
-          <div class="col-sm-3">
-              {{ helper.render_app_local_nav(app, 'settings', current_user) }}
-          </div>
-        <div class="col-sm-9">
-            <h1><strong>{{app.name}}</strong>: Delete project</h1>
-            <div class="alert alert-danger">
-                <strong>{{ _('Danger Zone!') }}</strong> {{ _('If you delete the project and its tasks, it will be gone forever!') }}
-            </div>
-            {{ helper.render_app_summary(app, n_tasks, overall_progress, last_activity, current_user) }}
-            <form class="form-horizontal" method="post" action="{{ url_for('app.delete', short_name = app.short_name) }}">
-            <fieldset>
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                <h3><strong>{{ _('Are you sure you want to delete this project and all its tasks and associated task runs?') }}</strong></h3>
-                <div class="form-actions">
-                  <input type="submit" class="btn btn-sm" value="Yes, delete it"/>
-                  <a href="{{ url_for('app.settings', short_name = app.short_name) }}" class="btn btn-lg btn-danger">{{ _('No, do not delete it!') }}</a>
+        {{ helper.render_app_local_nav(app, 'auditlog', current_user) }}
+            <div class="container-padded">
+                <div class="container container-padded">
+                    <div class="row">
+                        <div class="col-sm-9 col-sm-offset-3">
+                          <h1><strong>{{app.name}}</strong>: Delete project</h1>
+                          <div class="alert alert-danger">
+                              <strong>{{ _('Warning!') }}</strong> {{ _('If you delete the project, it and its tasks will be gone forever!') }}
+                          </div>
+                          <form role="form" method="post" action="{{ url_for('app.delete', short_name = app.short_name) }}">
+                          <fieldset>
+                              <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                              <h3><strong>{{ _('Are you sure you want to delete this project and all of its tasks?') }}</strong></h3>
+                              <div class="pull-right" role="group">
+                                <input type="submit" class="btn btn-default" value="Yes, delete it"/>
+                                <a href="{{ url_for('app.settings', short_name = app.short_name) }}" class="btn btn-danger">{{ _('No, do not delete it!') }}</a>
+                              </div>
+                        </div>
+                    </div>
                 </div>
-        </div>
-      </div>
-    </div>
-</div>
+            </div>
 {% else %}
   <div class="page-header">
     <h1>{{ _('Sorry! This project does not exist.') }}</h1>
