--- a/templates/applications/importers/flickr.html
+++ b/templates/applications/importers/flickr.html
@@ -6,59 +6,56 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 {{ helper.render_loading(loading_text) }}
-    <div class="container-padded">
-        <div class="container container-padded">
-<div class="row">
-    <div class="col-sm-3">
-        {{ helper.render_app_local_nav(app, 'tasks', current_user)}}
-    </div>
-
-
-   <div class="col-sm-9">
-       <h1><strong>{{app.name}}</strong>: {{_('Import tasks')}}</h1>
-       <h2>{{_('From a Flickr Album')}}
-           {% if albums %}
-           <a href="{{ url_for('flickr.logout', next=url_for(target, short_name=app.short_name, type='flickr')) }}" class="btn btn-secondary pull-right">{{ _('Revoke access') }}</a>
-           {% endif %}
-       </h2>
-       {% if not albums %}
-          <p> {{ _('Grant Crowdcrafting access to your Flickr albums to select one...') }}</p></br>
-
-       <p><a href="{{ url_for('flickr.login', next=url_for(target, short_name=app.short_name, type='flickr')) }}" class="btn btn-secondary">{{ _('Log in Flickr') }}</a></p>
-       {% else %}
-           {{ _('Select one of your albums:') }}
-           <div class="row">
-           <ul>
-           {% for album in albums %}
-               <li class="col-md-4">
-                   <h3>{{ album['title'] }}</h3>
-                   <img src="{{ album['thumbnail_url'] }}">
-                   <p class="small">{{ album['photos'] }} {{ _('photos') }}</p>
-                   <button id="{{ album['id'] }}" class="btn btn-default btn-album">{{ _('Select') }}</button>
-               </li>
-           {% endfor %}
-           </ul>
-       </div>
-      </br>
-        {% endif %}
-        <br>
-        {% if form %}
-        <form class="form-horizontal" method="post" action="{{ url_for(target, short_name=app.short_name) }}">
-            <fieldset>
-                {{ form.hidden_tag() }}
-                <span class="help-block"> {{ _('Or manually provide the ID of a Flickr set with images for') }} {{ active_app }}. <br/> {{ _('For more information, please look at') }} <a href="http://docs.pybossa.com/en/latest/user/overview.html#importing-the-tasks-from-a-flickr-photo-set" target="_blank">{{ _('the documentation') }}.</a></span>
-                {{ render_field(form.album_id, class_="input-block-level", placeholder="The ID of the Flickr set") }}
-                <div class="form-actions">
-                    <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
-                    <a href="{{ url_for('app.settings', short_name=app.short_name) }}" class="btn">{{_('Cancel')}}</a>
+        {{ helper.render_app_local_nav(app, 'auditlog', current_user) }}
+            <div class="container-padded">
+                <div class="container container-padded">
+                    <div class="row">
+                        <div class="col-sm-9 col-sm-offset-3">
+                            <h1><strong>{{app.name}}</strong>: {{_('Import tasks')}}</h1>
+                            <h3>{{_('From Flickr')}}
+                                {% if albums %}
+                                    <a href="{{ url_for('flickr.logout', next=url_for(target, short_name=app.short_name, type='flickr')) }}" class="btn btn-warning pull-right">{{ _('Revoke access') }}</a>
+                                {% endif %}
+                            </h3>
+                            <hr>
+                            {% if not albums %}
+                               <p> {{ _('To select an album click below to grant access to your Flickr account') }}</p></br>
+                     
+                            <p><a href="{{ url_for('flickr.login', next=url_for(target, short_name=app.short_name, type='flickr')) }}" class="btn btn-success">{{ _('Log in to Flickr') }}</a></p>
+                            {% else %}
+                            <h3>{{ _('Select an album, then click import:') }}</h3>
+                            <div class="row">
+                                <ul>
+                                {% for album in albums %}
+                                    <li class="col-md-4">
+                                        <h4><strong>{{ album['title'] }}</strong></h4>
+                                        <img src="{{ album['thumbnail_url'] }}" class="grey-border">
+                                        <p class="small">{{ album['photos'] }} {{ _('photos') }}</p>
+                                        <button id="{{ album['id'] }}" class="btn btn-success btn-album">{{ _('Select') }}</button>
+                                    </li>
+                                {% endfor %}
+                                </ul>
+                            </div>
+                            </br>
+                            {% endif %}
+                            <br>
+                            {% if form %}
+                            <form role="form" method="post" action="{{ url_for(target, short_name=app.short_name) }}" class="padding-top-sm">
+                                <fieldset>
+                                     {{ form.hidden_tag() }}
+                                     <span class="help-block"> {{ _('Alteratively, you can manually provide the ID of a Flickr album') }}</span>
+                                     {{ render_field(form.album_id, class_="input-block-level form-control", placeholder="The ID of the Flickr album") }}
+                                     <div class="pull-right" role="group">
+                                        <a href="{{url_for('app.import_task', short_name=app.short_name)}}" class="btn btn-default">{{_('Cancel')}}</a>
+                                        <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
+                                     </div>
+                                 </fieldset>
+                             </form>
+                             {% endif %}
+                        </div>
+                    </div>
                 </div>
-            </fieldset>
-        </form>
-        {% endif %}
-    </div>
-</div>
-        </div>
-    </div>
+            </div>
 <script>
     $("#submit").off('click').on('click', function(){
         $("#loading").show();
