--- a/templates/applications/tasks/delete.html
+++ b/templates/applications/tasks/delete.html
@@ -4,29 +4,27 @@
 {% import "applications/_helpers.html" as helper %}
 
 {% block content %}
-<div class="row">
-    <div class="col-sm-3">
-        {{ helper.render_app_local_nav(app, active_link, current_user) }}
-    </div>
-    <div class="col-sm-9">
-        <h1><strong>{{app.name}}</strong>: Delete all Tasks and Task Runs</h1>
-        <div class="alert alert-danger">
-            <strong>{{_('Danger Zone!')}}</strong> {{_('If you delete all the
-            tasks and task runs they will be gone
-            forever!')}}<br/><strong>{{_('You cannot undo this action!')}}</strong>
-        </div>
-        {{ helper.render_app_summary(app, n_tasks, overall_progress, last_activity, current_user) }}
-        <form class="form-horizontal" method="post" action="{{ url_for('app.delete_tasks', short_name = app.short_name) }}">
-            <h3><strong>{{_('Are you sure you want to delete ALL the project tasks and associated task runs?')}}</strong></h3>
-        <div class="form-actions">
-          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-          <button type="submit" name='btn' class="btn btn-sm"
-              value="Yes">{{_('Yes')}}</button>
-          <a href="{{ url_for('app.settings', short_name = app.short_name) }}"
-              class="btn btn-lg btn-danger">{{_('No, do not delete
-              anything!')}}</a>
-        </div>
-    </div>
-</div>
+        {{ helper.render_app_local_nav(app, 'auditlog', current_user) }}
+            <div class="container-padded">
+                <div class="container container-padded">
+                    <div class="row">
+                        <div class="col-sm-9 col-sm-offset-3">
+                            <h1><strong>{{app.name}}</strong>: Delete all Tasks and Task Runs</h1>
+                            <div class="alert alert-danger">
+                                <strong>{{_('Warning!')}}</strong> {{_('If you delete the tasks and task runs they will be gone forever!')}}
+                            </div>
+                            <form role="form" method="post" action="{{ url_for('app.delete_tasks', short_name = app.short_name) }}">
+                                <h3><strong>{{_('Are you sure you want to delete ALL of the project tasks and associated task runs?')}}</strong></h3>
+                                <div class="pull-right" role="group">
+                                    <button type="submit" name='btn' class="btn btn-default" value="Yes">{{_('Yes')}}</button>
+                                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                                    <a href="{{ url_for('app.settings', short_name = app.short_name) }}"
+                                    class="btn btn-danger">{{_('No, do not delete anything!')}}</a>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
 {{ helper.broken_image() }}
 {% endblock %}
