BL and OCLC database search pages updated

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,9 +1,9 @@
 /* Styling */
 /* ======= */
 
-.readonly-select {
+.form-control[readonly].readonly-select {
   cursor: pointer;
-  color: #fff;
+  background-color: #fff;
 }
 
 .inline-block {
