--- a/templates/404.html
+++ b/templates/404.html
@@ -6,11 +6,11 @@
         <div class="container container-padded">
             <h1>Page not found!</h1>
             <p class="lead">We're sorry, but we can't find the page that you're looking for.</p>
-            <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-lg" style="display:none;"> 
+            <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-inverse" style="display:none;"> 
                 <i class="glyphicon glyphicon-home"></i>
                 Go Home
             </a>
-            <a id="btnBack" href="#" class="btn btn-lg" onclick="history.back()" style="display:none;"> 
+            <a id="btnBack" href="#" class="btn btn-inverse" onclick="history.back()" style="display:none;"> 
                 <i class="glyphicon glyphicon-arrow-left"></i>
                 Go Back</a>
         </div>
