--- a/templates/500.html
+++ b/templates/500.html
@@ -9,11 +9,11 @@
                 <p class="lead">It looks as though there's a problem with our system.</p>
                 <p class="lead">We will try to fix it as soon as we can.</p>
             
-                <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-lg" style="display:none;"> 
+                <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-inverse" style="display:none;"> 
                     <i class="glyphicon glyphicon-home"></i>
                     Go Home
                 </a>
-                <a id="btnBack" href="#" class="btn btn-lg" onclick="history.back()" style="display:none;"> 
+                <a id="btnBack" href="#" class="btn btn-inverse" onclick="history.back()" style="display:none;"> 
                     <i class="glyphicon glyphicon-arrow-left"></i>
                     Go Back</a>
             </div>
